2023-10-16T01:00:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6527658739 # 1270
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-16
* notice: last 14d: unq all: 7 4139
* notice: prev accum: outdated-unq outdated-all / unq all: 1749 165860 / 1789 170281
* notice: next accum: outdated-unq outdated-all / unq all: 1751 166161 / 1789 170376
* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -0 -76 / +2 +300 -0 -0 / 2 300
* notice: removed / changed dates: [2023-10-01] / [2023-10-02 2023-10-15]

2023-10-15T16:15:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6525153228 # 1269
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-15
* notice: last 14d: unq all: 7 4160
* notice: prev accum: outdated-unq outdated-all / unq all: 1749 165860 / 1789 170188
* notice: next accum: outdated-unq outdated-all / unq all: 1749 165860 / 1789 170281
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -1 -94 / +2 +205 -0 -0 / 2 205
* notice: removed / changed dates: [] / [2023-10-01 2023-10-15]

2023-10-15T08:15:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6522916285 # 1268
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-15
* notice: last 14d: unq all: 7 4161
* notice: prev accum: outdated-unq outdated-all / unq all: 1749 165860 / 1787 170076
* notice: next accum: outdated-unq outdated-all / unq all: 1749 165860 / 1789 170188
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -91 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2023-10-01 2023-10-15]

2023-10-15T01:03:23Z: