@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2023-10-16T08:17:56Z",
+  "count" : 113,
+  "count_minmax" : [ 113, 113 ],
+  "count_decinc" : [ -0, +113 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 3, 3 ],
+  "uniques_decinc" : [ -0, +3 ]
+}
