@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-10-16T01:00:30Z",
+  "timestamp" : "2023-10-16T08:17:56Z",
   "count_outdated" : 166161,
   "uniques_outdated" : 1751,
-  "count" : 170376,
-  "uniques" : 1789,
+  "count" : 170489,
+  "uniques" : 1792,
   "clones" : [
     {
       "timestamp": "2023-10-02T00:00:00Z",
-      "count": 224,
+      "count": 133,
       "count_minmax": [ 112, 300 ],
-      "count_decinc": [ 76, 300 ],
+      "count_decinc": [ 167, 300 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -130,6 +130,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-10-16T00:00:00Z",
+      "count": 113,
+      "count_minmax": [ 113, 113 ],
+      "count_decinc": [ 0, 113 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
