@@ -1,10 +1,10 @@
 {
-  "count": 4139,
+  "count": 4161,
   "uniques": 7,
   "clones": [
     {
       "timestamp": "2023-10-02T00:00:00Z",
-      "count": 224,
+      "count": 133,
       "uniques": 2
     },
     {
@@ -71,6 +71,11 @@
       "timestamp": "2023-10-15T00:00:00Z",
       "count": 300,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-10-16T00:00:00Z",
+      "count": 113,
+      "uniques": 3
     }
   ]
 }
