@@ -1,3 +1,12 @@
+2023-10-16T08:17:56Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6530883261 # 1271
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-16
+* notice: last 14d: unq all: 7 4161
+* notice: prev accum: outdated-unq outdated-all / unq all: 1751 166161 / 1789 170376
+* notice: next accum: outdated-unq outdated-all / unq all: 1751 166161 / 1792 170489
+* notice: prev exec diff / last date diff / accum: unq all: +3 +113 -0 -91 / +3 +113 -0 -0 / 3 113
+* notice: removed / changed dates: [] / [2023-10-02 2023-10-16]
+
 2023-10-16T01:00:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6527658739 # 1270
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-16
